# perfmax

./: .gitignore  Cargo.toml  README.md  install.sh  perfmax.desktop  perfmax.service
src/: ai.rs  app.rs  config.rs  discovery.rs  main.rs  metrics.rs  model_manager.rs  optimizer.rs  server_manager.rs  state.rs
src/ui/: ai_panel.rs  dashboard.rs  memory.rs  mod.rs  settings.rs
