[package]
name = "perfmax"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "perfmax"
path = "src/main.rs"

[dependencies]
# GUI — wgpu backend for GPU-accelerated rendering
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui_plot = "0.31"

# System tray — KDE StatusNotifierItem (pure Rust, no GTK dep)
ksni = "0.2"

# System metrics
sysinfo = "0.33"
nvml-wrapper = "0.10"

# AI — HTTP to local llama.cpp / vLLM OpenAI-compat endpoint
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "5"

# Async runtime (background tasks)
tokio = { version = "1", features = ["full"] }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
